Closed
Bug 1866117
Opened 2 years ago
Closed 2 years ago
Fix a few minor issues, nits, etc.
Categories
(MailNews Core :: General, defect)
MailNews Core
General
Tracking
(thunderbird_esr115 wontfix)
RESOLVED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| thunderbird_esr115 | --- | wontfix |
People
(Reporter: Yury.Ivanovich, Assigned: Yury.Ivanovich)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/115.0
Steps to reproduce:
I'll submit a patch.
Updated•2 years ago
|
Assignee: nobody → Yury.Ivanovich
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•2 years ago
|
status-thunderbird_esr115:
--- → wontfix
Keywords: checkin-needed-tb
Target Milestone: --- → 122 Branch
Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/1fe13bc6e53d
fix various nits: Unneeded include, argument checking, typos, etc. r=mkmelin
You need to log in
before you can comment on or make changes to this bug.
Description
•