Bug 1866117 - fix various nits: Unneeded include, argument checking, typos, etc. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D194404

--HG--
extra : moz-landing-system : lando