mail/components/extensions/ExtensionAccounts.sys.mjs
@@ -409,7 +409,7 @@ export function getFolder(target) {
     // The target is a folderId.
     const parts = target.split(":/");
     accountId = parts.shift();
-    // The path may contain ":/" itself, so stich it all back together.
+    // The path may contain ":/" itself, so stitch it all back together.
     path = parts.join(":/");
   }
 
